made operator input only

--- a/calc.html
+++ b/calc.html
@@ -16,7 +16,7 @@
     <div class="calc">
         <div class="container">
             <input id="input1" type="number" onmousedown="onSelectedInputChange('input1')" placeholder="0">
-            <input id="operator" type="text" placeholder="+">
+            <input id="operator" type="text" readonly placeholder="+">
             <input id="input2" type="number" onmousedown="onSelectedInputChange('input2')" placeholder="0">
             <input id="output" type="text" readonly placeholder="0">
         </div>
