changed d in del to capital D

--- a/calc.html
+++ b/calc.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container">
             <button class="btn btn-primary clear" onclick="onClear()">Clear</button>
-            <button class="btn btn-primary clear" onclick="onDelete()">del</button>
+            <button class="btn btn-primary clear" onclick="onDelete()">Del</button>
         </div>
 
     </div>
