Testing ipad broken click

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button class="aritmatic btn btn-primary" onclick="onInputOperator('+')">+</button>
         </div>
         <div class="container">
-            <button class="btn btn-primary clear" onclick="onClear()">Clear</button>
+            <button class="btn btn-primary clear" onclick="onClear()" style="cursor:pointer;">Clear</button>
             <button class="btn btn-primary clear" onclick="onDelete()">Del</button>
         </div>
 
